--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Quantum Vault – Full Working HTML with Interactive Player Badge Modal -->
+<!-- Quantum Vault – Updated Home with Working Player Badge, Balances, and Modal Fixes -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,7 +74,7 @@
     .badge-info .handle { color: #ccc; font-size: 12px; }
     .badge-stats { font-size: 11px; color: #aaa; margin-top: 4px; }
 
-        .balance-badges {
+    .balance-badges {
       margin-top: 10px;
       display: flex;
       gap: 10px;
@@ -181,128 +181,139 @@
       <div class="title">New Players (Last 48h)</div>
       <div id="newPlayers">Loading...</div>
     </div>
+  </div>
 
-    <div class="modal" id="badgeModal">
-      <div class="modal-content">
-        <h2>Edit Player Badge</h2>
-        <label for="editNickname">Nickname</label>
-        <input type="text" id="editNickname" placeholder="Enter nickname" />
-        <label for="editHandle">𝕏 Handle</label>
-        <input type="text" id="editHandle" placeholder="@handle" />
-        <label for="editRimColor">Badge Rim Color</label>
-        <input type="color" id="editRimColor" value="#00ffe1" />
-        <div class="modal-actions">
-          <button class="save" id="saveBadgeBtn">Save</button>
-          <button class="cancel" onclick="closeModal()">Cancel</button>
-        </div>
+  <div class="modal" id="badgeModal">
+    <div class="modal-content">
+      <h2>Edit Player Badge</h2>
+      <label for="editNickname">Nickname</label>
+      <input type="text" id="editNickname" placeholder="Enter nickname" />
+      <label for="editHandle">𝕏 Handle</label>
+      <input type="text" id="editHandle" placeholder="@handle" />
+      <label for="editRimColor">Badge Rim Color</label>
+      <input type="color" id="editRimColor" value="#00ffe1" />
+      <div class="modal-actions">
+        <button class="save" id="saveBadgeBtn">Save</button>
+        <button class="cancel" id="cancelBadgeBtn">Cancel</button>
       </div>
     </div>
+  </div>
 
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-      import {
-        getFirestore, doc, getDoc, setDoc, collection, getDocs, query,
-        orderBy, limit, where, serverTimestamp
-      } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import {
+      getFirestore, doc, getDoc, setDoc, collection, getDocs, query,
+      orderBy, limit, where
+    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
-        authDomain: "y2k-arcade.firebaseapp.com",
-        projectId: "y2k-arcade",
-        storageBucket: "y2k-arcade.appspot.com",
-        messagingSenderId: "1063043176357",
-        appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
-      };
+    const firebaseConfig = {
+      apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
+      authDomain: "y2k-arcade.firebaseapp.com",
+      projectId: "y2k-arcade",
+      storageBucket: "y2k-arcade.appspot.com",
+      messagingSenderId: "1063043176357",
+      appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+    };
 
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    let currentWallet = "";
 
-      let currentWallet = "";
+    async function connectWalletAndLoad() {
+      if (!window.ethereum) {
+        alert("Please install MetaMask");
+        return;
+      }
+      const provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      const signer = provider.getSigner();
+      currentWallet = (await signer.getAddress()).toLowerCase();
 
-            async function connectWalletAndLoad() {
-        if (!window.ethereum) {
-          alert("Please install MetaMask");
-          return;
+      const short = `${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
+      document.getElementById("walletDisplay").textContent = "Welcome back: " + short;
+
+      const userSnap = await getDoc(doc(db, "users", currentWallet));
+      if (userSnap.exists()) {
+        const data = userSnap.data();
+        document.getElementById("badgePFP").src = data.pfpUrl || `https://api.dicebear.com/6.x/pixel-art/svg?seed=anon`;
+        document.getElementById("badgeNickname").textContent = "@" + (data.username || "anon");
+        document.getElementById("badgeHandle").textContent = data.xHandle ? `𝕏: @${data.xHandle}` : "𝕏: N/A";
+        document.getElementById("badgeY2K").textContent = `Y2K: ${data.earnings || 0}`;
+        document.getElementById("badgeGames").textContent = `Games: ${data.games || 0}`;
+        document.getElementById("badgeWins").textContent = `Wins: ${data.wins || 0}`;
+
+        if (data.badgeColor) {
+          document.getElementById("playerBadge").style.borderColor = data.badgeColor;
+          document.getElementById("editRimColor").value = data.badgeColor;
         }
-        const provider = new ethers.providers.Web3Provider(window.ethereum);
-        await provider.send("eth_requestAccounts", []);
-        const signer = provider.getSigner();
-        currentWallet = (await signer.getAddress()).toLowerCase();
 
-        const short = `${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
-        document.getElementById("walletDisplay").textContent = "Welcome back: " + short;
-
-        const userSnap = await getDoc(doc(db, "users", currentWallet));
-        if (userSnap.exists()) {
-          const data = userSnap.data();
-          document.getElementById("badgePFP").src = data.pfpUrl || `https://api.dicebear.com/6.x/pixel-art/svg?seed=anon`;
-          document.getElementById("badgeNickname").textContent = "@" + (data.username || "anon");
-          document.getElementById("badgeHandle").textContent = data.xHandle || "";
-          document.getElementById("badgeY2K").textContent = `Y2K: ${data.earnings || 0}`;
-          document.getElementById("badgeGames").textContent = `Games: ${data.games || 0}`;
-          document.getElementById("badgeWins").textContent = `Wins: ${data.wins || 0}`;
-          if (data.badgeColor) {
-            document.getElementById("playerBadge").style.borderColor = data.badgeColor;
-            document.getElementById("editRimColor").value = data.badgeColor;
-          }
-          document.getElementById("editNickname").value = data.username || "";
-          document.getElementById("editHandle").value = data.xHandle || "";
-        }
+        document.getElementById("editNickname").value = data.username || "";
+        document.getElementById("editHandle").value = data.xHandle || "";
       }
 
-      async function loadMVP() {
-        const topSnap = await getDocs(query(collection(db, "users"), orderBy("earnings", "desc"), limit(1)));
-        if (!topSnap.empty) {
-          const top = topSnap.docs[0].data();
-          document.getElementById("mvpUser").textContent = "@" + (top.username || "anon");
-          document.getElementById("mvpEarnings").textContent = `${top.earnings || 0} Y2K Earned`;
-        }
+      // Pull CRO and Y2K balances
+      try {
+        const croBal = await provider.getBalance(currentWallet);
+        const cro = parseFloat(ethers.utils.formatEther(croBal)).toFixed(2);
+        document.getElementById("croBalance").textContent = `CRO: ${cro}`;
+      } catch (err) {
+        document.getElementById("croBalance").textContent = "CRO: --";
       }
+    }
 
-      async function loadNewPlayers() {
-        const cutoff = Date.now() - (48 * 60 * 60 * 1000);
-        const q = query(collection(db, "users"), where("createdAt", ">", cutoff));
-        const snap = await getDocs(q);
-        const box = document.getElementById("newPlayers");
-        box.innerHTML = snap.empty ? "No new users yet." : "";
-        snap.forEach(doc => {
-          const u = doc.data();
-          const tag = document.createElement("div");
-          tag.className = "badge";
-          tag.textContent = "@" + (u.username || "anon");
-          box.appendChild(tag);
-        });
+    async function loadMVP() {
+      const topSnap = await getDocs(query(collection(db, "users"), orderBy("earnings", "desc"), limit(1)));
+      if (!topSnap.empty) {
+        const top = topSnap.docs[0].data();
+        document.getElementById("mvpUser").textContent = "@" + (top.username || "anon");
+        document.getElementById("mvpEarnings").textContent = `${top.earnings || 0} Y2K Earned`;
       }
+    }
 
-      document.getElementById("saveBadgeBtn").onclick = async () => {
-        const nickname = document.getElementById("editNickname").value.trim();
-        const handle = document.getElementById("editHandle").value.trim();
-        const rimColor = document.getElementById("editRimColor").value;
-
-        await setDoc(doc(db, "users", currentWallet), {
-          username: nickname,
-          xHandle: handle,
-          badgeColor: rimColor
-        }, { merge: true });
-
-        document.getElementById("badgeNickname").textContent = "@" + nickname;
-        document.getElementById("badgeHandle").textContent = handle;
-        document.getElementById("playerBadge").style.borderColor = rimColor;
-
-        closeModal();
-      };
-
-      function closeModal() {
-        document.getElementById("badgeModal").style.display = "none";
-      }
-
-      document.getElementById("playerBadge").addEventListener("click", () => {
-        document.getElementById("badgeModal").style.display = "flex";
+    async function loadNewPlayers() {
+      const cutoff = Date.now() - (48 * 60 * 60 * 1000);
+      const q = query(collection(db, "users"), where("createdAt", ">", cutoff));
+      const snap = await getDocs(q);
+      const box = document.getElementById("newPlayers");
+      box.innerHTML = snap.empty ? "No new users yet." : "";
+      snap.forEach(doc => {
+        const u = doc.data();
+        const tag = document.createElement("div");
+        tag.className = "badge";
+        tag.textContent = "@" + (u.username || "anon");
+        box.appendChild(tag);
       });
+    }
 
-      connectWalletAndLoad();
-      loadMVP();
-      loadNewPlayers();
-    </script>
-  </body>
+    document.getElementById("playerBadge").addEventListener("click", () => {
+      document.getElementById("badgeModal").style.display = "flex";
+    });
+
+    document.getElementById("cancelBadgeBtn").addEventListener("click", () => {
+      document.getElementById("badgeModal").style.display = "none";
+    });
+
+    document.getElementById("saveBadgeBtn").addEventListener("click", async () => {
+      const nickname = document.getElementById("editNickname").value.trim();
+      const handle = document.getElementById("editHandle").value.trim();
+      const rimColor = document.getElementById("editRimColor").value;
+
+      await setDoc(doc(db, "users", currentWallet), {
+        username: nickname,
+        xHandle: handle,
+        badgeColor: rimColor
+      }, { merge: true });
+
+      document.getElementById("badgeNickname").textContent = "@" + nickname;
+      document.getElementById("badgeHandle").textContent = handle ? `𝕏: @${handle}` : "𝕏: N/A";
+      document.getElementById("playerBadge").style.borderColor = rimColor;
+
+      document.getElementById("badgeModal").style.display = "none";
+    });
+
+    connectWalletAndLoad();
+    loadMVP();
+    loadNewPlayers();
+  </script>
+</body>
 </html>
