--- a/index.html
+++ b/index.html
@@ -1,158 +1,56 @@
-<!-- Quantum Vault – Updated Home with Working Player Badge, Balances, and Modal Fixes -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quantum Vault – Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+  <title>Quantum Vault – Lounge</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; }
-    body {
-      background: #000;
-      color: #fff;
-      padding: 16px;
-    }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding-bottom: 100px;
-    }
+    * { box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; margin: 0; padding: 0; }
+    body { background: #000; color: #fff; padding: 16px; }
+    .container { max-width: 600px; margin: auto; }
     .section {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 18px;
-      padding: 24px;
-      margin-bottom: 20px;
-      backdrop-filter: blur(14px);
+      background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 18px; padding: 24px; margin-bottom: 20px; backdrop-filter: blur(14px);
     }
-    .title {
-      font-size: 20px;
-      color: #00ffe1;
-      margin-bottom: 12px;
-    }
-    .wallet {
-      font-size: 13px;
-      color: #aaa;
-      margin-bottom: 8px;
-      word-break: break-word;
-    }
+    .title { font-size: 20px; color: #00ffe1; margin-bottom: 12px; }
+    .wallet { font-size: 13px; color: #aaa; margin-bottom: 8px; word-break: break-word; }
     .badge {
-      display: inline-block;
-      background: #00ffe1;
-      color: #000;
-      padding: 4px 10px;
-      font-size: 12px;
-      border-radius: 6px;
-      margin: 6px 4px;
-      font-weight: bold;
+      background: #00ffe1; color: #000; padding: 4px 10px; font-size: 12px;
+      border-radius: 6px; margin: 6px 4px; font-weight: bold; display: inline-block;
     }
     .player-badge {
-      display: flex;
-      align-items: center;
-      background: #111;
-      border-radius: 14px;
-      padding: 12px;
-      margin-top: 10px;
-      border: 2px solid #00ffe1;
-      cursor: pointer;
+      display: flex; align-items: center; background: #111;
+      border-radius: 14px; padding: 12px; border: 2px solid #00ffe1; cursor: pointer;
     }
     .player-badge img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 12px;
-      border: 2px solid #00ffe1;
+      width: 50px; height: 50px; border-radius: 50%; object-fit: cover;
+      margin-right: 12px; border: 2px solid #00ffe1;
     }
-    .badge-info {
-      display: flex;
-      flex-direction: column;
-    }
-    .badge-info .nickname { color: #00ffe1; font-weight: bold; }
-    .badge-info .handle { color: #ccc; font-size: 12px; }
+    .badge-info { display: flex; flex-direction: column; }
+    .nickname { color: #00ffe1; font-weight: bold; }
+    .handle { color: #ccc; font-size: 12px; }
     .badge-stats { font-size: 11px; color: #aaa; margin-top: 4px; }
-
-    .balance-badges {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    .modal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.8);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-    .modal-content {
-      background: #111;
-      padding: 24px;
-      border-radius: 14px;
-      width: 90%;
-      max-width: 360px;
-      text-align: left;
-      color: #fff;
-      box-shadow: 0 0 10px #00ffe1;
-    }
-    .modal-content h2 {
-      color: #00ffe1;
-      margin-bottom: 16px;
-      font-size: 18px;
-    }
-    .modal-content label {
-      font-size: 12px;
-      margin-top: 10px;
-      display: block;
-      color: #aaa;
-    }
-    .modal-content input[type="text"],
-    .modal-content input[type="color"] {
-      width: 100%;
-      padding: 10px;
-      border-radius: 8px;
-      background: #000;
-      border: 1px solid #444;
-      color: #00ffe1;
-      margin-top: 4px;
-    }
-    .modal-actions {
-      margin-top: 16px;
-      display: flex;
-      justify-content: space-between;
-    }
-    .modal-actions button {
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-    .modal-actions .save {
-      background: #00ffe1;
-      color: #000;
-    }
-    .modal-actions .cancel {
-      background: #333;
-      color: #fff;
+    .share-btn {
+      margin-top: 14px; padding: 10px 20px; background: #00ffe1;
+      color: #000; border: none; border-radius: 10px; font-weight: bold; cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+    <div class="container">
     <div class="section">
       <div class="title">Welcome Back</div>
       <div id="walletDisplay" class="wallet">Connecting...</div>
+
       <div class="player-badge" id="playerBadge">
         <img id="badgePFP" src="https://api.dicebear.com/6.x/pixel-art/svg?seed=anon" alt="PFP" />
         <div class="badge-info">
           <div class="nickname" id="badgeNickname">@anon</div>
-          <div class="handle" id="badgeHandle">@handle</div>
+          <div class="handle" id="badgeHandle">𝕏: N/A</div>
           <div class="badge-stats">
             <span id="badgeGames">Games: 0</span>
             <span id="badgeWins">Wins: 0</span>
@@ -160,15 +58,8 @@
           </div>
         </div>
       </div>
-      <div class="balance-badges">
-        <div id="y2kBalance" class="badge">Y2K: 0</div>
-        <div id="croBalance" class="badge">CRO: 0</div>
-      </div>
-    </div>
 
-        <div class="section">
-      <div class="title">Latest Announcement</div>
-      <div id="latestAnnouncement">Loading...</div>
+      <button class="share-btn" onclick="shareBadge()">Share to 𝕏</button>
     </div>
 
     <div class="section">
@@ -183,7 +74,7 @@
     </div>
   </div>
 
-  <div class="modal" id="badgeModal">
+    <div class="modal" id="badgeModal">
     <div class="modal-content">
       <h2>Edit Player Badge</h2>
       <label for="editNickname">Nickname</label>
@@ -202,8 +93,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import {
-      getFirestore, doc, getDoc, setDoc, collection, getDocs, query,
-      orderBy, limit, where
+      getFirestore, doc, getDoc, setDoc, collection, getDocs, query, orderBy, limit, where
     } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -224,34 +114,31 @@
         alert("Please install MetaMask");
         return;
       }
+
       const provider = new ethers.providers.Web3Provider(window.ethereum);
       await provider.send("eth_requestAccounts", []);
       const signer = provider.getSigner();
       currentWallet = (await signer.getAddress()).toLowerCase();
 
-      const short = `${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
-      document.getElementById("walletDisplay").textContent = "Welcome back: " + short;
+      document.getElementById("walletDisplay").textContent = `Welcome back: ${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
 
       const userSnap = await getDoc(doc(db, "users", currentWallet));
       if (userSnap.exists()) {
-        const data = userSnap.data();
-        document.getElementById("badgePFP").src = data.pfpUrl || `https://api.dicebear.com/6.x/pixel-art/svg?seed=anon`;
-        document.getElementById("badgeNickname").textContent = "@" + (data.username || "anon");
-        document.getElementById("badgeHandle").textContent = data.xHandle ? `𝕏: @${data.xHandle}` : "𝕏: N/A";
-        document.getElementById("badgeY2K").textContent = `Y2K: ${data.earnings || 0}`;
-        document.getElementById("badgeGames").textContent = `Games: ${data.games || 0}`;
-        document.getElementById("badgeWins").textContent = `Wins: ${data.wins || 0}`;
-
-        if (data.badgeColor) {
-          document.getElementById("playerBadge").style.borderColor = data.badgeColor;
-          document.getElementById("editRimColor").value = data.badgeColor;
+        const d = userSnap.data();
+        document.getElementById("badgePFP").src = d.pfpUrl || `https://api.dicebear.com/6.x/pixel-art/svg?seed=anon`;
+        document.getElementById("badgeNickname").textContent = "@" + (d.username || "anon");
+        document.getElementById("badgeHandle").textContent = d.xHandle ? `𝕏: @${d.xHandle}` : "𝕏: N/A";
+        document.getElementById("badgeGames").textContent = `Games: ${d.games || 0}`;
+        document.getElementById("badgeWins").textContent = `Wins: ${d.wins || 0}`;
+        document.getElementById("badgeY2K").textContent = `Y2K: ${d.earnings || 0}`;
+        if (d.badgeColor) {
+          document.getElementById("playerBadge").style.borderColor = d.badgeColor;
+          document.getElementById("editRimColor").value = d.badgeColor;
         }
-
-        document.getElementById("editNickname").value = data.username || "";
-        document.getElementById("editHandle").value = data.xHandle || "";
+        document.getElementById("editNickname").value = d.username || "";
+        document.getElementById("editHandle").value = d.xHandle || "";
       }
 
-      // Pull CRO and Y2K balances
       try {
         const croBal = await provider.getBalance(currentWallet);
         const cro = parseFloat(ethers.utils.formatEther(croBal)).toFixed(2);
@@ -307,9 +194,22 @@
       document.getElementById("badgeNickname").textContent = "@" + nickname;
       document.getElementById("badgeHandle").textContent = handle ? `𝕏: @${handle}` : "𝕏: N/A";
       document.getElementById("playerBadge").style.borderColor = rimColor;
-
       document.getElementById("badgeModal").style.display = "none";
     });
+
+    function shareBadge() {
+      const captions = [
+        "Just leveled up my badge in the Quantum Vault. Can you beat this?",
+        "This badge? Earned in sweat, risk, and Y2K. #QuantumVault",
+        "Badge on. Stats live. Come get yours. #CROFAM",
+        "Stack wins. Burn tokens. Vault your legacy. #QuantumBadge",
+        "I made it through the vault. Here’s proof. #QuantumLounge"
+      ];
+
+      const text = encodeURIComponent(captions[Math.floor(Math.random() * captions.length)]);
+      const url = encodeURIComponent("https://quantum-vault-y2kxroast.netlify.app/");
+      window.open(`https://twitter.com/intent/tweet?text=${text}&url=${url}`, "_blank");
+    }
 
     connectWalletAndLoad();
     loadMVP();
