--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Quantum Vault – Fixed & Polished Homepage -->
+<!-- Quantum Vault – Locked-In, Polished Homepage -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Space Grotesk', sans-serif;
+      font-family: 'Space Grotesk', sans-serif;
     }
     body {
       background: #000;
@@ -53,7 +53,6 @@
       margin: 6px 4px;
       font-weight: bold;
     }
-
     .player-badge {
       display: flex;
       align-items: center;
@@ -79,15 +78,13 @@
     .badge-info .nickname { color: #00ffe1; font-weight: bold; }
     .badge-info .handle { color: #ccc; font-size: 12px; }
     .badge-stats { font-size: 11px; color: #aaa; margin-top: 4px; }
-
-    .balance-badges {
+        .balance-badges {
       margin-top: 10px;
       display: flex;
       gap: 10px;
       justify-content: center;
       flex-wrap: wrap;
     }
-
     .modal {
       position: fixed;
       inset: 0;
@@ -158,7 +155,7 @@
       <div class="player-badge" id="playerBadge">
         <img id="badgePFP" src="https://api.dicebear.com/6.x/pixel-art/svg?seed=anon" alt="PFP" />
         <div class="badge-info">
-          <div class="nickname" id="badgeNickname">@anon</div>
+          <div class="nickname" id="badgeNickname">anon</div>
           <div class="handle" id="badgeHandle">𝕏: @handle</div>
           <div class="badge-stats">
             <span id="badgeGames">Games: 0</span>
@@ -243,7 +240,7 @@
     if (userSnap.exists()) {
       const data = userSnap.data();
       document.getElementById("badgePFP").src = data.pfpUrl || `https://api.dicebear.com/6.x/pixel-art/svg?seed=anon`;
-      document.getElementById("badgeNickname").textContent = "@" + (data.username || "anon");
+      document.getElementById("badgeNickname").textContent = data.username || "anon";
       document.getElementById("badgeHandle").textContent = data.xHandle ? `𝕏: @${data.xHandle}` : "𝕏: N/A";
       document.getElementById("badgeY2K").textContent = `Y2K: ${data.earnings || 0}`;
       document.getElementById("badgeGames").textContent = `Games: ${data.games || 0}`;
@@ -258,7 +255,6 @@
       document.getElementById("editHandle").value = data.xHandle || "";
     }
 
-    // CRO Balance
     try {
       const croBal = await provider.getBalance(currentWallet);
       const cro = parseFloat(ethers.utils.formatEther(croBal)).toFixed(2);
@@ -267,7 +263,6 @@
       document.getElementById("croBalance").textContent = "CRO: --";
     }
 
-    // Y2K Balance (ERC20)
     try {
       const y2kContract = new ethers.Contract(
         "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d",
@@ -292,7 +287,7 @@
   }
 
   async function loadNewPlayers() {
-    const cutoff = Date.now() - 48 * 60 * 60 * 1000;
+    const cutoff = Date.now() - (48 * 60 * 60 * 1000);
     const q = query(collection(db, "users"), where("createdAt", ">", cutoff));
     const snap = await getDocs(q);
     const box = document.getElementById("newPlayers");
@@ -325,7 +320,7 @@
       badgeColor: rimColor
     }, { merge: true });
 
-    document.getElementById("badgeNickname").textContent = "@" + nickname;
+    document.getElementById("badgeNickname").textContent = nickname;
     document.getElementById("badgeHandle").textContent = handle ? `𝕏: @${handle}` : "𝕏: N/A";
     document.getElementById("playerBadge").style.borderColor = rimColor;
     document.getElementById("badgeModal").style.display = "none";
