--- a/index.html
+++ b/index.html
@@ -213,6 +213,12 @@
       </div>
     </div>
 
+   <div style="text-align: center; margin-top: 10px;">
+  <button onclick="shareBadge()" style="padding:8px 16px; background:#00ffe1; color:#000; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
+    Share Your Badge
+  </button>
+</div> 
+
     <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
 import {
@@ -371,6 +377,18 @@ document.getElementById("sendMsgBtn").addEventListener("click", async () => {
 connectWalletAndLoad();
 loadMVP();
 loadNewPlayers();
+
+      function shareBadge() {
+  const nickname = document.getElementById("badgeNickname").textContent.replace(/^@/, "") || "anon";
+  const shareText = encodeURIComponent(`Check out my badge in the Quantum Vault! Built on #CROFAM. Powered by $Y2K.
+
+@${nickname} just leveled up.
+→ quantum-vault-y2kxroast.netlify.app`);
+
+  const shareUrl = `https://twitter.com/intent/tweet?text=${shareText}`;
+  window.open(shareUrl, '_blank');
+}
+      
 </script>
 </body>
 </html>
